--- a/index.css
+++ b/index.css
@@ -6,6 +6,8 @@
 }
 #main .carousel-inner img {
    max-height: 70vh; 
+   object-fit: cover;
+   filter: grayscale(70%);
 }
 #footer{
   background-color:#06112e!important;
